# alexandria

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.playwright-mcp/: page-2026-07-10T17-54-57-719Z.yml  page-2026-07-10T18-02-42-770Z.yml  page-2026-07-10T18-03-44-430Z.yml  page-2026-07-10T23-16-35-603Z.yml  page-2026-07-10T23-16-46-502Z.yml  page-2026-07-10T23-16-51-471Z.yml  page-2026-07-10T23-17-02-943Z.yml  page-2026-07-10T23-17-41-872Z.yml  page-2026-07-10T23-20-13-979Z.yml  page-2026-07-10T23-20-25-786Z.yml  page-2026-07-10T23-20-35-107Z.yml  page-2026-07-10T23-20-40-675Z.yml  page-2026-07-10T23-20-56-634Z.yml  page-2026-07-10T23-21-08-358Z.yml  page-2026-07-11T02-13-54-338Z.yml  page-2026-07-11T02-14-00-036Z.yml  page-2026-07-11T02-15-46-878Z.yml  page-2026-07-11T02-37-39-782Z.yml  page-2026-07-11T02-38-16-954Z.yml  (+12 more)
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/src/: __main__.py  app.py
apps/api/src/alexandria_api/: __main__.py  app.py
apps/api/tests/: test_app.py
apps/engine/: Dockerfile  package.json  pyproject.toml
apps/engine/src/alexandria_engine/: __main__.py  app.py  factory.py  ollama_provider.py  openai_provider.py
apps/engine/src/engine/: __main__.py  app.py  factory.py  ollama_provider.py  openai_provider.py  qwen_embedder.py  router.py
apps/engine/tests/: test_factory.py  test_ollama_provider.py  test_openai_provider.py  test_qwen_embedder.py  test_router.py  test_vision_providers.py
(+44 files in other folders)
