[project]
name = "alexandria-api"
version = "0.1.0"
description = "Alexandria FastAPI HTTP layer (ingest/graph/search)"
requires-python = ">=3.11"
dependencies = [
  "alexandria-core",
  "alexandria-engine",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Pull the engine's heavy ML stack through, for an all-in-one (no separate engine service).
ml = ["alexandria-engine[ml]"]

[tool.uv.sources]
alexandria-core = { workspace = true }
alexandria-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
