[project]
name = "alexandria-engine"
version = "0.1.0"
description = "Alexandria GPU/ML engine: Qwen3 embeddings + OpenAI/Ollama LLM providers"
requires-python = ">=3.11"
dependencies = [
  "alexandria-core",
  "openai>=1.40",
  "ollama>=0.3",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Heavy local-embedding stack (pulls in torch). Install with: uv sync --extra ml
ml = ["sentence-transformers>=3.0"]

[tool.uv.sources]
alexandria-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alexandria_engine"]
